Add gh actions for building container images on release
Build container images on release and push them to ghcr.

Fixes: https://github.com/google/go-containerregistry/issues/1877

Signed-off-by: Jasper Orschulko <jasper@fancydomain.eu>

--- a/.ko/default/.ko.yaml
+++ b/.ko/default/.ko.yaml
@@ -1,6 +1,5 @@
-defaultBaseImage: gcr.io/distroless/base:debug
 builds:
-  - id: debug
+  - id: default
     flags:
       - -trimpath
     ldflags:
