--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -22,10 +22,31 @@ jobs:
       - name: Setup Ko
         uses: ko-build/setup-ko@v0.7
       - name: Build the crane-ish builder images
-        run: ko publish --bare -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+        run: |
+          ko build -B github.com/google/go-containerregistry/cmd/crane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+          ko build -B github.com/google/go-containerregistry/cmd/gcrane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+          # ./cmd/krane is a separate module, so switch directories.
+          cd ./cmd/krane
+          ko build -B github.com/google/go-containerregistry/cmd/krane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
         env:
-          KO_CONFIG_PATH: ./.ko/default/.ko.yaml
+          KO_CONFIG_PATH: ${{ github.workspace }}/.ko/default/.ko.yaml
+          # TODO: not sure if github.repository is correct here, see also below
+          KO_DOCKER_REPO: ghcr.io/${{ github.repository }}
       - name: Build the crane-ish builder debug images
-        run: ko publish --bare -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+        run: |
+          ko build -B github.com/google/go-containerregistry/cmd/crane  -t "debug"
+          ko build -B github.com/google/go-containerregistry/cmd/gcrane -t "debug"
+          # ./cmd/krane is a separate module, so switch directories.
+          cd ${{ github.workspace }}/cmd/krane
+          ko build -B github.com/google/go-containerregistry/cmd/krane -t "debug"
         env:
-          KO_CONFIG_PATH: ./.ko/debug/.ko.yaml
+          KO_CONFIG_PATH: ${{ github.workspace }}/.ko/debug/.ko.yaml
+      - name: Build the tag specific debug images
+        run: |
+          KO_DOCKER_REPO=gcr.io/${{ github.repository }}/crane/debug  ko build --bare github.com/google/go-containerregistry/cmd/crane  -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+          KO_DOCKER_REPO=gcr.io/${{ github.repository }}/gcrane/debug ko build --bare github.com/google/go-containerregistry/cmd/gcrane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+          # ./cmd/krane is a separate module, so switch directories.
+          cd ./cmd/krane
+          KO_DOCKER_REPO=gcr.io/${{ github.repository }}/krane/debug ko build --bare github.com/google/go-containerregistry/cmd/krane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+        env:
+          KO_CONFIG_PATH: ${{ github.workspace }}/.ko/debug/.ko.yaml
