--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -27,11 +27,11 @@ jobs:
         uses: ko-build/setup-ko@v0.7
       - name: Build the crane-ish builder images
         run: |
-          ko build -B github.com/google/go-containerregistry/cmd/crane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
-          ko build -B github.com/google/go-containerregistry/cmd/gcrane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+          ko build -B github.com/google/go-containerregistry/cmd/crane -t latest -t $GITHUB_SHA -t $GITHUB_REF
+          ko build -B github.com/google/go-containerregistry/cmd/gcrane -t latest -t $GITHUB_SHA -t $GITHUB_REF
           # ./cmd/krane is a separate module, so switch directories.
           cd ./cmd/krane
-          ko build -B github.com/google/go-containerregistry/cmd/krane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+          ko build -B github.com/google/go-containerregistry/cmd/krane -t latest -t $GITHUB_SHA -t $GITHUB_REF
         env:
           KO_CONFIG_PATH: ${{ github.workspace }}/.ko/default/.ko.yaml
           # TODO: not sure if steps.string.outputs.lowercase is correct here, see also below
@@ -47,10 +47,10 @@ jobs:
           KO_CONFIG_PATH: ${{ github.workspace }}/.ko/debug/.ko.yaml
       - name: Build the tag specific debug images
         run: |
-          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/crane/debug  ko build --bare github.com/google/go-containerregistry/cmd/crane  -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
-          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/gcrane/debug ko build --bare github.com/google/go-containerregistry/cmd/gcrane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/crane/debug  ko build --bare github.com/google/go-containerregistry/cmd/crane  -t latest -t $GITHUB_SHA -t $GITHUB_REF
+          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/gcrane/debug ko build --bare github.com/google/go-containerregistry/cmd/gcrane -t latest -t $GITHUB_SHA -t $GITHUB_REF
           # ./cmd/krane is a separate module, so switch directories.
           cd ./cmd/krane
-          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/krane/debug ko build --bare github.com/google/go-containerregistry/cmd/krane -t latest -t ${{ env.GITHUB_SHA }} -t ${{ env.GITHUB_REF }}
+          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/krane/debug ko build --bare github.com/google/go-containerregistry/cmd/krane -t latest -t $GITHUB_SHA -t $GITHUB_REF
         env:
           KO_CONFIG_PATH: ${{ github.workspace }}/.ko/debug/.ko.yaml
