--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -31,32 +31,31 @@ jobs:
         uses: ko-build/setup-ko@v0.7
       - name: Build the crane-ish builder images
         run: |
-          ko build -B github.com/google/go-containerregistry/cmd/crane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
-          ko build -B github.com/google/go-containerregistry/cmd/gcrane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
+          ko build -B github.com/${GITHUB_REPOSITORY}/cmd/crane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
+          ko build -B github.com/${GITHUB_REPOSITORY}/cmd/gcrane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
           # ./cmd/krane is a separate module, so switch directories.
           cd ./cmd/krane
-          ko build -B github.com/google/go-containerregistry/cmd/krane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
+          ko build -B github.com/${GITHUB_REPOSITORY}/cmd/krane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
         env:
           KO_CONFIG_PATH: ${{ github.workspace }}/.ko/default/.ko.yaml
-          # TODO: not sure if steps.string.outputs.lowercase is correct here, see also below
           KO_DOCKER_REPO: ghcr.io/${{ steps.string.outputs.lowercase }}
           SOURCE_TAG: ${{ steps.tag_name.outputs.SOURCE_TAG }}
       - name: Build the crane-ish builder debug images
         run: |
-          ko build -B github.com/google/go-containerregistry/cmd/crane  -t "debug"
-          ko build -B github.com/google/go-containerregistry/cmd/gcrane -t "debug"
+          ko build -B github.com/${GITHUB_REPOSITORY}/cmd/crane  -t "debug"
+          ko build -B github.com/${GITHUB_REPOSITORY}/cmd/gcrane -t "debug"
           # ./cmd/krane is a separate module, so switch directories.
           cd ${{ github.workspace }}/cmd/krane
-          ko build -B github.com/google/go-containerregistry/cmd/krane -t "debug"
+          ko build -B github.com/${GITHUB_REPOSITORY}/cmd/krane -t "debug"
         env:
           KO_CONFIG_PATH: ${{ github.workspace }}/.ko/debug/.ko.yaml
       - name: Build the tag specific debug images
         run: |
-          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/crane/debug  ko build --bare github.com/google/go-containerregistry/cmd/crane  -t latest -t $GITHUB_SHA -t $SOURCE_TAG
-          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/gcrane/debug ko build --bare github.com/google/go-containerregistry/cmd/gcrane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
+          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/crane/debug  ko build --bare github.com/${GITHUB_REPOSITORY}/cmd/crane  -t latest -t $GITHUB_SHA -t $SOURCE_TAG
+          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/gcrane/debug ko build --bare github.com/${GITHUB_REPOSITORY}/cmd/gcrane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
           # ./cmd/krane is a separate module, so switch directories.
           cd ./cmd/krane
-          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/krane/debug ko build --bare github.com/google/go-containerregistry/cmd/krane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
+          KO_DOCKER_REPO=gcr.io/${{ steps.string.outputs.lowercase }}/krane/debug ko build --bare github.com/${GITHUB_REPOSITORY}/cmd/krane -t latest -t $GITHUB_SHA -t $SOURCE_TAG
         env:
           KO_CONFIG_PATH: ${{ github.workspace }}/.ko/debug/.ko.yaml
           SOURCE_TAG: ${{ steps.tag_name.outputs.SOURCE_TAG }}
