--- a/.ko/default/.ko.yaml
+++ b/.ko/default/.ko.yaml
@@ -3,4 +3,4 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -X=github.com/google/go-containerregistry/cmd/crane/cmd.Version={{Git.FullCommit}}
+      - -X=github.com/google/go-containerregistry/cmd/crane/cmd.Version={{.Git.FullCommit}}
