--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   KO_DEFAULTPLATFORMS: all
-  GOFLAGS: "-ldflags=-X=github.com/google/go-containerregistry/cmd/crane/cmd.Version=$GITHUB_SHA"
+  GOFLAGS: "-ldflags=-X=github.com/google/go-containerregistry/cmd/crane/cmd.Version=${{ vars.GITHUB_SHA }}"
 
 jobs:
   release-container:
