--- a/.ko/debug/.ko.yaml
+++ b/.ko/debug/.ko.yaml
@@ -4,5 +4,5 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -X github.com/google/go-containerregistry/cmd/crane/cmd.Version={{.Git.Tag}}
+      - -X github.com/google/go-containerregistry/cmd/crane/cmd.Version=1.0.0
       - -X github.com/google/go-containerregistry/pkg/v1/remote/transport.Version={{.Git.Tag}}
