--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           KO_DOCKER_REPO: ghcr.io/${{ steps.lowercase-repository-name.outputs.lowercase }}
           SOURCE_TAG: ${{ steps.tag_name.outputs.SOURCE_TAG }}
-          GOFLAGS: -ldflags=-X=github.com/google/go-containerregistry/cmd/crane/cmd.Version=${{ steps.tag_name.outputs.SOURCE_TAG }},-X=github.com/google/go-containerregistry/pkg/v1/remote/transport.Version={{.Version}}"
+          GOFLAGS: -ldflags="-X 'github.com/google/go-containerregistry/cmd/crane/cmd.Version=${{ steps.tag_name.outputs.SOURCE_TAG }}' -X 'github.com/google/go-containerregistry/pkg/v1/remote/transport.Version={{.Version}}'"
       - name: Build the crane-ish builder debug images
         run: |
           ko build -B github.com/google/go-containerregistry/cmd/crane  -t "debug"
@@ -51,7 +51,7 @@ jobs:
           ko build -B github.com/google/go-containerregistry/cmd/krane -t "debug"
         env:
           KO_CONFIG_PATH: ${{ github.workspace }}/.ko/debug/.ko.yaml
-          GOFLAGS: -ldflags=-X=github.com/google/go-containerregistry/cmd/crane/cmd.Version=${{ steps.tag_name.outputs.SOURCE_TAG }},-X=github.com/google/go-containerregistry/pkg/v1/remote/transport.Version={{.Version}}"
+          GOFLAGS: -ldflags="-X 'github.com/google/go-containerregistry/cmd/crane/cmd.Version=${{ steps.tag_name.outputs.SOURCE_TAG }}' -X 'github.com/google/go-containerregistry/pkg/v1/remote/transport.Version={{.Version}}'"
       - name: Build the tag specific debug images
         run: |
           KO_DOCKER_REPO=ghcr.io/${{ steps.lowercase-repository-name.outputs.lowercase }}/crane/debug  ko build --bare github.com/google/go-containerregistry/cmd/crane  -t latest -t $GITHUB_SHA -t $SOURCE_TAG
@@ -62,4 +62,4 @@ jobs:
         env:
           KO_CONFIG_PATH: ${{ github.workspace }}/.ko/debug/.ko.yaml
           SOURCE_TAG: ${{ steps.tag_name.outputs.SOURCE_TAG }}
-          GOFLAGS: -ldflags=-X=github.com/google/go-containerregistry/cmd/crane/cmd.Version=${{ steps.tag_name.outputs.SOURCE_TAG }},-X=github.com/google/go-containerregistry/pkg/v1/remote/transport.Version={{.Version}}"
+          GOFLAGS: -ldflags="-X 'github.com/google/go-containerregistry/cmd/crane/cmd.Version=${{ steps.tag_name.outputs.SOURCE_TAG }}' -X 'github.com/google/go-containerregistry/pkg/v1/remote/transport.Version={{.Version}}'"
